--- a/repasando-html/variables_funciones/index.html
+++ b/repasando-html/variables_funciones/index.html
@@ -11,6 +11,9 @@
     <button onclick="mostrar_mensaje()">mostrar</button>
     <button onclick="mostrar_en_consola()">mostrar en consola</button>
     <button onclick="validar()">calificar</button>
+
+    <button onclick="visualizar()">visualizar</button>
+
     <script src="index.js"></script>
 </body>
 </html>
